# pbr-model-viewer

./: .gitignore  CMakeLists.txt  README.md
assets/t-60-helmet/source/: T-60 HelmetU.fbx
shaders/: brdf-integrate.frag  brdf-integrate.vert  compile.bat  convolute.frag  convolute.vert  ext.glsl  main.frag  main.vert  pbr.glsl  prefilter.frag  prefilter.vert  prepass.frag  prepass.vert  shader.comp  shader.frag  shader.vert  skybox.frag  skybox.vert  sphere-cube.frag  sphere-cube.vert  ss-quad.frag  ssao.frag  ssao.vert  ubo.glsl  utils.glsl
shaders/utils/: ubo.glsl
src/: automaton.cpp  automaton.h  main.cpp
src/render/: camera.cpp  camera.h  globals.h  libs.h  renderer.cpp  renderer.h  vertex.cpp  vertex.h
src/render/gui/: gui.cpp  gui.h
src/render/mesh/: mesh.cpp  mesh.h  model.cpp  model.h  vertex.cpp  vertex.h
src/render/vk/: buffer.cpp  buffer.h  cmd.cpp  cmd.h  descriptor.cpp  descriptor.h  image.cpp  image.h  pipeline.cpp  pipeline.h  render-pass.cpp  render-pass.h  swapchain.cpp  swapchain.h
src/utils/: file-type.h  glfw-statics.cpp  glfw-statics.h  input-manager.cpp  input-manager.h  key-manager.cpp  key-manager.h  octree-gen.cpp  octree-gen.h  stopwatch.cpp  stopwatch.h
